   * support filtering on campaign_list requests: name, last update time
     (before or after), language of translation
   * campaign_list response now contains the time the request was processed
   * campaign_list response now contains information about translations
   * fixed problem with duplicate translations being saved with each upload
 * utils
   * added weblist.pl and webtgz.pl web interface programs
   * changed wml.pm to use substr instead of split to convert string to array:
     saves about half memory usage for large strings
   * changed wml_net.pm to insert into preallocated string instead of
     appending: should save memory and time, but not benchmarked
   * added prkill script, to calculate probabilities to kill in a skirmish
 * WML improvements:
   * added swarm attack special
   * random map generator now uses island_size (#4458)
   * fixed incorrect savefile name after continue_no_save (#4439)
   * fix bad leader starting position causing crash
   * tighten up checks on leaders and units placed on map at start of scenario
   * add a backup save_id to use if both save_id and description are empty
   * fix duplicate key values being concatenated: just replace with last value
   * units can now have a [extra_anim] tag, and a [animate_unit] event to
     trigger it
   * new advance and post_advance events that triggers before and after a unit
     advancement -- patch by Noyga
 * documentation: switch doxygen templates from CVS to SVN, Savannah to Gna!
 * added a --with-preferences-dir configure option to allow using a directory
   other than .wesnoth, for coexistence of multiple versions on same machine
 * changed get_random to not nest [random] tags to avoid problems with deeply
   nested tags and compressed save files.
 * various bug fixes and code cleanups

Version 1.0rc1:
 * language and i18n:
   * updated translations: Afrikaans, Bulgarian, Catalan, Finnish, German,
     Greek, Hungarian, Japanese, Portuguese (Brazil), Russian, Slovenian,